2007-12-03	Till Straumann <strauman@slac.stanford.edu>

	* rtems/powerpc/registers.h: added definitions for MSR_CE,
	MSR_DE (bookE).

2007-12-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/old-exceptions/cpu.h: Remove extra ifndef.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/new-exceptions/cpu.h, rtems/old-exceptions/cpu.h,
	rtems/score/cpu.h: Move interrupt_stack_size field from CPU Table to
	Configuration Table. Eliminate CPU Table from all ports. Delete
	references to CPU Table in all forms.

2007-12-03	Till Straumann <strauman@slac.stanford.edu>

	* rtems/score/cpu.h: Added comment that GDB patch sim/2376
	is needed for reading the time-base with the new (more
	portable) method.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/new-exceptions/cpu.h, rtems/old-exceptions/cpu.h: Moved most of
	the remaining CPU Table fields to the Configuration Table. This
	included pretasking_hook, predriver_hook, postdriver_hook, idle_task,
	do_zero_of_workspace, extra_mpci_receive_server_stack,
	stack_allocate_hook, and stack_free_hook. As a side-effect of this
	effort some multiprocessing code was made conditional and some style
	clean up occurred.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* rtems/score/cpu.h: Wonderful bookE doesn't have mftb/mftbu;
	( CPU_Get_timebase_low() ) they only define the TBRU/TBRL SPRs
	so we use these. Should work on all CPUs.

2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/new-exceptions/cpu.h, rtems/old-exceptions/cpu.h,
	rtems/score/cpu.h: Eliminate PowerPC specific elements from the CPU
	Table. They have been replaced with variables named bsp_XXX as
	needed.

2007-11-13	Till Straumann <strauman@slac.stanford.edu>

	* rtems/score/powerpc.h: Added a '__ppc_generic' CPU variant.
	The goal would be making cpukit and hopefully libcpu work
	for all (or at least most) CPUs/BSPs with -D__ppc_generic so
	that eventually all tests [#if defined(<cpu_flavor>)] for CPU