@@ -1,7 +1,7 @@
 /*
  * This file contains some powerpc MSR and registers access definitions.
  *
- * Copyright (C) 1999  Eric Valette (valette@crf.canon.fr)
+ * COPYRIGHT (C) 1999  Eric Valette (valette@crf.canon.fr)
  *                     Canon Centre Recherche France.
  *
  *  Added MPC8260 Andy Dachs <a.dachs@sstl.co.uk>
