@@ -1,3 +1,8 @@
+2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* rtems/powerpc/registers.h, rtems/score/cpu.h: Sweep to make sure grep
+	for COPYRIGHT passes.
+
 2007-12-03	Till Straumann <strauman@slac.stanford.edu>
 
 	* rtems/powerpc/registers.h: added definitions for MSR_CE,
